2002-01-29  Richard Williamson  <rjw@apple.com>

    First pass as frame code.  Still needs cleanup.
    
	* src/kdelibs/khtml/dom/dom_misc.cpp: (DomShared::ref), (DomShared::deref):
	* src/kdelibs/khtml/dom/dom_misc.h:
	* src/kdelibs/khtml/khtmlview.cpp: (KHTMLView::~KHTMLView):
	* src/kwq/KWQComboBox.mm: (QComboBox::setCurrentItem):
	* src/kwq/KWQKHTMLPart.h:
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::~KHTMLPart), (KHTMLPart::begin),
	(KHTMLPart::end), (KHTMLPart::xmlDocImpl), (KHTMLPart::khtmlMouseReleaseEvent),
	(KHTMLPart::requestFrameName), (KHTMLPart::requestFrame),
	(KHTMLPart::requestObject), (KHTMLPart::checkCompleted):

2002-01-29  Kenneth Kocienda  <kocienda@apple.com>

        Checked in the missing file
        
	* include/WCURLHandle.h:

2002-01-29  Kenneth Kocienda  <kocienda@apple.com>

        Changed over to the new cache loader in WebFoundation
        
	* src/kwq/KWQKHTMLPart.h:
	* src/kwq/KWQKHTMLPart.mm: (-[KHTMLPartLoadClient init]), (-[KHTMLPartLoadClient
	WCURLHandleResourceDidBeginLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandleResourceDidCancelLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandleResourceDidFinishLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandle:resourceDataDidBecomeAvailable:offset:length:userData:]),
	(-[KHTMLPartLoadClient WCURLHandle:resourceDidFailLoadingWithResult:userData:]),
	(-[KHTMLPartLoadClient dealloc]), (KHTMLPart::slotData), (KHTMLPart::openURL):
	* src/kwq/KWQKjobclasses.mm:
	* src/kwq/KWQKloader.mm: (-[URLLoadClient initWithLoader:]), (-[URLLoadClient
	WCURLHandleResourceDidBeginLoading:userData:]), (-[URLLoadClient
	WCURLHandleResourceDidCancelLoading:userData:]), (-[URLLoadClient
	WCURLHandleResourceDidFinishLoading:userData:]), (-[URLLoadClient
	WCURLHandle:resourceDataDidBecomeAvailable:offset:length:userData:]),
	(-[URLLoadClient WCURLHandle:resourceDidFailLoadingWithResult:userData:]),
	(-[URLLoadClient dealloc]):
	* src/kwq/kio/jobclasses.h:
