@@ -17,6 +17,9 @@
 
 @end
 
+@protocol WCHTTPURLHandle
+-(NSString *)responseHeaderForKey:(NSString *)key;
+@end
 
 #if defined(__cplusplus)
 extern "C" {
